lang/macro/tests/ui/fail/09-invalid-visibility.stderr
error: crate-level visibility or visibility level restricted to some path is not supported for liquid functions
  --> $DIR/09-invalid-visibility.rs:12:9
   |
12 |         pub(crate) fn noop(&self) {}
   |         ^^^^^^^^^^
